--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="img\apple-touch-icon.png">
+ <meta name="description" content="Hmmmmm"/>
+<meta property="og:title" content="Romet Piir"/>
+<link rel="apple-touch-icon" sizes="180x180" href="img\apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="img\favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="img\favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
