--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta name="description" content="Hmmmmm"/>
-<meta property="og:title" content="Romet Piir"/>
-<link rel="apple-touch-icon" sizes="180x180" href="img\apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img\favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img\favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Romet Piir</title>
-  <link rel="stylesheet" href="assets\css.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img\apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img\favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img\favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Romet Piir</title>
+    <style>
+        
+        a {
+            text-decoration: none; 
+            color: white; 
+        }
+    </style>
+    <link rel="stylesheet" href="assets\css.css">
 </head>
 <body>
   <div class="container">
     <h1></h1>
-    <p>secret... :)</p>
+    <p>secret... <a href="https://github.com/Rometpiir">:)</a></p>
     <!-- Countdown Timer -->
     <div id="countdown"></div>
   </div>
